pagination small screen fix

--- a/src/scss/_pagination.scss
+++ b/src/scss/_pagination.scss
@@ -1,18 +1,22 @@
 .pagination {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 40px;
+
   .tui-page-btn {
     background-color: $color_white;
     border: none;
     color: $color_black;
-    padding: 10px 25px;
+    padding: 15px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 14px;
-    border-radius: 10px;
+    font-size: 10px;
+    border-radius: 5px;
     @media screen and (min-width: 480px) {
+      font-size: 14px;
+      border-radius: 10px;
       padding: 5px 15px;
     }
     @media screen and (min-width: 768px) {
@@ -23,7 +27,7 @@
     }
   }
   .tui-is-selected {
-    font-size: 18px;
+    font-size: 14px;
     color: white;
     background: $color_orange;
     box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
